refactor: change the way to remove incorrect data

--- a/notebooks/2-preprocessing.ipynb
+++ b/notebooks/2-preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4          8 yrs  100K   10K   NaN           $110,000    Hsin-chu, TP, Taiwan  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "11            location                                          Location"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "Name: company_size, dtype: int32"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "4  100000.0  10000.0      NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "Name: total_compensation, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "max             839900.0           2960000.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
        "(1258, 12)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
        "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "(1258, 12)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,38 +1061,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "company               object\n",
-       "company_size           int32\n",
-       "job_title             object\n",
-       "level                 object\n",
-       "domain                object\n",
-       "yoe_total              int32\n",
-       "yoe_at_company         int32\n",
-       "base                   int32\n",
-       "stock                  int32\n",
-       "bonus                  int32\n",
-       "total_compensation     int32\n",
-       "location              object\n",
+       "company                object\n",
+       "company_size            int32\n",
+       "job_title              object\n",
+       "level                  object\n",
+       "domain                 object\n",
+       "yoe_total               int32\n",
+       "yoe_at_company          int32\n",
+       "base                  float64\n",
+       "stock                 float64\n",
+       "bonus                 float64\n",
+       "total_compensation    float64\n",
+       "location               object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# convert all the `float64` columns to `int64`\n",
-    "raw_df['base'] = raw_df['base'].astype(int)\n",
-    "raw_df['stock'] = raw_df['stock'].astype(int)\n",
-    "raw_df['bonus'] = raw_df['bonus'].astype(int)\n",
-    "raw_df['total_compensation'] = raw_df['total_compensation'].astype(int)\n",
     "raw_df['yoe_total'] = raw_df['yoe_total'].astype(int)\n",
     "raw_df['yoe_at_company'] = raw_df['yoe_at_company'].astype(int)\n",
     "\n",
@@ -1108,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1112,7 @@
      "output_type": "stream",
      "text": [
       "Number of rows with wrong total_compensation: 214\n",
-      "Ratio: 17.01%\n"
+      "Ratio: 17.011128775834656%\n"
      ]
     },
     {
@@ -1164,10 +1160,10 @@
        "      <td>ML / AI</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>123100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>123097</td>\n",
+       "      <td>123100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>123097.0</td>\n",
        "      <td>New York, NY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1179,10 +1175,10 @@
        "      <td>Web Development (Front-End)</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>51500</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4800</td>\n",
-       "      <td>56250</td>\n",
+       "      <td>51500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4800.0</td>\n",
+       "      <td>56250.0</td>\n",
        "      <td>Cork, CK, Ireland</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1194,10 +1190,10 @@
        "      <td>Full Stack</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>24000</td>\n",
-       "      <td>7200</td>\n",
-       "      <td>2400</td>\n",
-       "      <td>33576</td>\n",
+       "      <td>24000.0</td>\n",
+       "      <td>7200.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>33576.0</td>\n",
        "      <td>Noida, UP, India</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1209,10 +1205,10 @@
        "      <td>API Development (Back-End)</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>25200</td>\n",
-       "      <td>4000</td>\n",
-       "      <td>3600</td>\n",
-       "      <td>32786</td>\n",
+       "      <td>25200.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>32786.0</td>\n",
        "      <td>Hyderabad, TS, India</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1224,10 +1220,10 @@
        "      <td>Full Stack</td>\n",
        "      <td>13</td>\n",
        "      <td>11</td>\n",
-       "      <td>73400</td>\n",
-       "      <td>38300</td>\n",
-       "      <td>11700</td>\n",
-       "      <td>123364</td>\n",
+       "      <td>73400.0</td>\n",
+       "      <td>38300.0</td>\n",
+       "      <td>11700.0</td>\n",
+       "      <td>123364.0</td>\n",
        "      <td>Bengaluru, KA, India</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1242,22 +1238,22 @@
        "10  Microsoft        182268  Software Engineer             60   \n",
        "11  Microsoft        182268  Software Engineer  Principal SDE   \n",
        "\n",
-       "                         domain  yoe_total  yoe_at_company    base  stock  \\\n",
-       "5                       ML / AI          2               0  123100      0   \n",
-       "8   Web Development (Front-End)          4               2   51500      0   \n",
-       "9                    Full Stack          2               2   24000   7200   \n",
-       "10   API Development (Back-End)          4               2   25200   4000   \n",
-       "11                   Full Stack         13              11   73400  38300   \n",
+       "                         domain  yoe_total  yoe_at_company      base    stock  \\\n",
+       "5                       ML / AI          2               0  123100.0      0.0   \n",
+       "8   Web Development (Front-End)          4               2   51500.0      0.0   \n",
+       "9                    Full Stack          2               2   24000.0   7200.0   \n",
+       "10   API Development (Back-End)          4               2   25200.0   4000.0   \n",
+       "11                   Full Stack         13              11   73400.0  38300.0   \n",
        "\n",
-       "    bonus  total_compensation              location  \n",
-       "5       0              123097          New York, NY  \n",
-       "8    4800               56250     Cork, CK, Ireland  \n",
-       "9    2400               33576      Noida, UP, India  \n",
-       "10   3600               32786  Hyderabad, TS, India  \n",
-       "11  11700              123364  Bengaluru, KA, India  "
+       "      bonus  total_compensation              location  \n",
+       "5       0.0            123097.0          New York, NY  \n",
+       "8    4800.0             56250.0     Cork, CK, Ireland  \n",
+       "9    2400.0             33576.0      Noida, UP, India  \n",
+       "10   3600.0             32786.0  Hyderabad, TS, India  \n",
+       "11  11700.0            123364.0  Bengaluru, KA, India  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,29 +1261,54 @@
    "source": [
     "# total_compensation must be greater than or equal to base, stock, bonus\n",
     "rows_with_wrong_total_compensation = raw_df[raw_df['total_compensation'] < raw_df['base'] + raw_df['stock'] + raw_df['bonus']]\n",
+    "wrong_ratio = rows_with_wrong_total_compensation.shape[0] / raw_df.shape[0] * 100\n",
     "print(f'Number of rows with wrong total_compensation: {rows_with_wrong_total_compensation.shape[0]}')\n",
-    "print(f'Ratio: {rows_with_wrong_total_compensation.shape[0] / raw_df.shape[0] * 100:.2f}%')\n",
+    "print(f'Ratio: {wrong_ratio}%')\n",
     "rows_with_wrong_total_compensation.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1044, 12)"
+       "(1258, 12)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop rows with wrong total_compensation\n",
+    "# if the absolute value of difference is less than 10%, replace the total_compensation with the sum of base, stock, bonus\n",
+    "rows_with_less_than_10_percent_difference = raw_df[abs(raw_df['total_compensation'] - (raw_df['base'] + raw_df['stock'] + raw_df['bonus'])) < 0.1 * raw_df['total_compensation']]\n",
+    "raw_df.loc[rows_with_less_than_10_percent_difference.index, 'total_compensation'] = raw_df['base'] + raw_df['stock'] + raw_df['bonus']\n",
+    "raw_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1250, 12)"
+      ]
+     },
+     "execution_count": 325,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# else drop the row\n",
+    "rows_with_wrong_total_compensation = raw_df[raw_df['total_compensation'] < raw_df['base'] + raw_df['stock'] + raw_df['bonus']]\n",
     "raw_df.drop(rows_with_wrong_total_compensation.index, inplace=True)\n",
     "raw_df.shape"
    ]
@@ -1301,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
