--- a/notebooks/3-exploration.ipynb
+++ b/notebooks/3-exploration.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -103,10 +103,10 @@
        "      <td>Testing (SDET)</td>\n",
        "      <td>10</td>\n",
        "      <td>5</td>\n",
-       "      <td>190000</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>200000</td>\n",
+       "      <td>190000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>200000.0</td>\n",
        "      <td>San Francisco Bay Area</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -118,10 +118,10 @@
        "      <td>ML / AI</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>126000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>133000</td>\n",
+       "      <td>126000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>133000.0</td>\n",
        "      <td>Vancouver, WA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -133,10 +133,10 @@
        "      <td>Testing (SDET)</td>\n",
        "      <td>11</td>\n",
        "      <td>11</td>\n",
-       "      <td>120000</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>12000</td>\n",
-       "      <td>137000</td>\n",
+       "      <td>120000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>12000.0</td>\n",
+       "      <td>137000.0</td>\n",
        "      <td>San Francisco, CA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -148,10 +148,10 @@
        "      <td>Production</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110000</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>110000.0</td>\n",
        "      <td>Hsin-chu, TP, Taiwan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -159,15 +159,15 @@
        "      <td>Logitech</td>\n",
        "      <td>7250</td>\n",
        "      <td>Software Engineer</td>\n",
-       "      <td>I4</td>\n",
-       "      <td>Android</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1</td>\n",
-       "      <td>185000</td>\n",
-       "      <td>15000</td>\n",
-       "      <td>18500</td>\n",
-       "      <td>218500</td>\n",
-       "      <td>San Francisco, CA</td>\n",
+       "      <td>I1</td>\n",
+       "      <td>ML / AI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>123100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>123100.0</td>\n",
+       "      <td>New York, NY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -185,37 +185,22 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1039</th>\n",
-       "      <td>Ubisoft</td>\n",
-       "      <td>21620</td>\n",
-       "      <td>Software Engineering Manager</td>\n",
-       "      <td>L4</td>\n",
-       "      <td>hidden</td>\n",
-       "      <td>19</td>\n",
-       "      <td>10</td>\n",
-       "      <td>126800</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>126802</td>\n",
-       "      <td>Montreal, QC, Canada</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1040</th>\n",
+       "      <th>1245</th>\n",
        "      <td>Ubisoft</td>\n",
        "      <td>21620</td>\n",
        "      <td>Software Engineering Manager</td>\n",
        "      <td>L3</td>\n",
-       "      <td>Full Stack</td>\n",
-       "      <td>23</td>\n",
-       "      <td>18</td>\n",
-       "      <td>82400</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8200</td>\n",
-       "      <td>90636</td>\n",
-       "      <td>Montreal, QC, Canada</td>\n",
+       "      <td>Video Game</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>80400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80400.0</td>\n",
+       "      <td>Bordeaux, AQ, France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1041</th>\n",
+       "      <th>1246</th>\n",
        "      <td>Ubisoft</td>\n",
        "      <td>21620</td>\n",
        "      <td>Software Engineering Manager</td>\n",
@@ -223,14 +208,29 @@
        "      <td>API Development (Back-End)</td>\n",
        "      <td>10</td>\n",
        "      <td>1</td>\n",
-       "      <td>115300</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11500</td>\n",
-       "      <td>126854</td>\n",
+       "      <td>115300.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11500.0</td>\n",
+       "      <td>126800.0</td>\n",
        "      <td>Montreal, QC, Canada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1042</th>\n",
+       "      <th>1247</th>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>21620</td>\n",
+       "      <td>Software Engineering Manager</td>\n",
+       "      <td>L3</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>73900.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>73900.0</td>\n",
+       "      <td>Paris, IL, France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1248</th>\n",
        "      <td>Ubisoft</td>\n",
        "      <td>21620</td>\n",
        "      <td>Software Engineering Manager</td>\n",
@@ -238,14 +238,14 @@
        "      <td>Full Stack</td>\n",
        "      <td>20</td>\n",
        "      <td>9</td>\n",
-       "      <td>125000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5000</td>\n",
-       "      <td>130000</td>\n",
+       "      <td>125000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>130000.0</td>\n",
        "      <td>Montreal, QC, Canada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1043</th>\n",
+       "      <th>1249</th>\n",
        "      <td>Ubisoft</td>\n",
        "      <td>21620</td>\n",
        "      <td>Software Engineering Manager</td>\n",
@@ -253,15 +253,15 @@
        "      <td>Game Development</td>\n",
        "      <td>25</td>\n",
        "      <td>10</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>20000</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>122000</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>122000.0</td>\n",
        "      <td>Toronto, ON, Canada</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1044 rows × 12 columns</p>\n",
+       "<p>1250 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -270,44 +270,44 @@
        "1     Logitech          7250             Software Engineer    I2   \n",
        "2     Logitech          7250             Software Engineer    I3   \n",
        "3     Logitech          7250             Software Engineer    I4   \n",
-       "4     Logitech          7250             Software Engineer    I4   \n",
+       "4     Logitech          7250             Software Engineer    I1   \n",
        "...        ...           ...                           ...   ...   \n",
-       "1039   Ubisoft         21620  Software Engineering Manager    L4   \n",
-       "1040   Ubisoft         21620  Software Engineering Manager    L3   \n",
-       "1041   Ubisoft         21620  Software Engineering Manager    L4   \n",
-       "1042   Ubisoft         21620  Software Engineering Manager    L4   \n",
-       "1043   Ubisoft         21620  Software Engineering Manager    L4   \n",
+       "1245   Ubisoft         21620  Software Engineering Manager    L3   \n",
+       "1246   Ubisoft         21620  Software Engineering Manager    L4   \n",
+       "1247   Ubisoft         21620  Software Engineering Manager    L3   \n",
+       "1248   Ubisoft         21620  Software Engineering Manager    L4   \n",
+       "1249   Ubisoft         21620  Software Engineering Manager    L4   \n",
        "\n",
-       "                          domain  yoe_total  yoe_at_company    base  stock  \\\n",
-       "0                 Testing (SDET)         10               5  190000  10000   \n",
-       "1                        ML / AI          4               3  126000      0   \n",
-       "2                 Testing (SDET)         11              11  120000   5000   \n",
-       "3                     Production          8               8  100000  10000   \n",
-       "4                        Android         13               1  185000  15000   \n",
-       "...                          ...        ...             ...     ...    ...   \n",
-       "1039                      hidden         19              10  126800      0   \n",
-       "1040                  Full Stack         23              18   82400      0   \n",
-       "1041  API Development (Back-End)         10               1  115300      0   \n",
-       "1042                  Full Stack         20               9  125000      0   \n",
-       "1043            Game Development         25              10  100000  20000   \n",
+       "                          domain  yoe_total  yoe_at_company      base  \\\n",
+       "0                 Testing (SDET)         10               5  190000.0   \n",
+       "1                        ML / AI          4               3  126000.0   \n",
+       "2                 Testing (SDET)         11              11  120000.0   \n",
+       "3                     Production          8               8  100000.0   \n",
+       "4                        ML / AI          2               0  123100.0   \n",
+       "...                          ...        ...             ...       ...   \n",
+       "1245                  Video Game         13              13   80400.0   \n",
+       "1246  API Development (Back-End)         10               1  115300.0   \n",
+       "1247                       Other         12              12   73900.0   \n",
+       "1248                  Full Stack         20               9  125000.0   \n",
+       "1249            Game Development         25              10  100000.0   \n",
        "\n",
-       "      bonus  total_compensation                location  \n",
-       "0         0              200000  San Francisco Bay Area  \n",
-       "1      7000              133000           Vancouver, WA  \n",
-       "2     12000              137000       San Francisco, CA  \n",
-       "3         0              110000    Hsin-chu, TP, Taiwan  \n",
-       "4     18500              218500       San Francisco, CA  \n",
-       "...     ...                 ...                     ...  \n",
-       "1039      0              126802    Montreal, QC, Canada  \n",
-       "1040   8200               90636    Montreal, QC, Canada  \n",
-       "1041  11500              126854    Montreal, QC, Canada  \n",
-       "1042   5000              130000    Montreal, QC, Canada  \n",
-       "1043   2000              122000     Toronto, ON, Canada  \n",
+       "        stock    bonus  total_compensation                location  \n",
+       "0     10000.0      0.0            200000.0  San Francisco Bay Area  \n",
+       "1         0.0   7000.0            133000.0           Vancouver, WA  \n",
+       "2      5000.0  12000.0            137000.0       San Francisco, CA  \n",
+       "3     10000.0      0.0            110000.0    Hsin-chu, TP, Taiwan  \n",
+       "4         0.0      0.0            123100.0            New York, NY  \n",
+       "...       ...      ...                 ...                     ...  \n",
+       "1245      0.0      0.0             80400.0    Bordeaux, AQ, France  \n",
+       "1246      0.0  11500.0            126800.0    Montreal, QC, Canada  \n",
+       "1247      0.0      0.0             73900.0       Paris, IL, France  \n",
+       "1248      0.0   5000.0            130000.0    Montreal, QC, Canada  \n",
+       "1249  20000.0   2000.0            122000.0     Toronto, ON, Canada  \n",
        "\n",
-       "[1044 rows x 12 columns]"
+       "[1250 rows x 12 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1044, 12)"
+       "(1250, 12)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -347,24 +347,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1044 entries, 0 to 1043\n",
+      "RangeIndex: 1250 entries, 0 to 1249\n",
       "Data columns (total 12 columns):\n",
-      " #   Column              Non-Null Count  Dtype \n",
-      "---  ------              --------------  ----- \n",
-      " 0   company             1044 non-null   object\n",
-      " 1   company_size        1044 non-null   int64 \n",
-      " 2   job_title           1044 non-null   object\n",
-      " 3   level               1044 non-null   object\n",
-      " 4   domain              1044 non-null   object\n",
-      " 5   yoe_total           1044 non-null   int64 \n",
-      " 6   yoe_at_company      1044 non-null   int64 \n",
-      " 7   base                1044 non-null   int64 \n",
-      " 8   stock               1044 non-null   int64 \n",
-      " 9   bonus               1044 non-null   int64 \n",
-      " 10  total_compensation  1044 non-null   int64 \n",
-      " 11  location            1044 non-null   object\n",
-      "dtypes: int64(7), object(5)\n",
-      "memory usage: 98.0+ KB\n"
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   company             1250 non-null   object \n",
+      " 1   company_size        1250 non-null   int64  \n",
+      " 2   job_title           1250 non-null   object \n",
+      " 3   level               1250 non-null   object \n",
+      " 4   domain              1250 non-null   object \n",
+      " 5   yoe_total           1250 non-null   int64  \n",
+      " 6   yoe_at_company      1250 non-null   int64  \n",
+      " 7   base                1250 non-null   float64\n",
+      " 8   stock               1250 non-null   float64\n",
+      " 9   bonus               1250 non-null   float64\n",
+      " 10  total_compensation  1250 non-null   float64\n",
+      " 11  location            1250 non-null   object \n",
+      "dtypes: float64(4), int64(3), object(5)\n",
+      "memory usage: 117.3+ KB\n"
      ]
     }
    ],
@@ -377,7 +377,7 @@
    "metadata": {},
    "source": [
     "> **Observation:** \n",
-    "> - The data has total 12 columns and 1044 rows\n",
+    "> - The data has total 12 columns and 1250 rows\n",
     "> - The data has no missing values\n",
     "> - The total data size is higher than 1000 which means it a well collecting data\n",
     "> - The type of the data is float64 and int64 which means it is a numerical data so we can easily apply some statistical methods to explore and analyze the data\n"
@@ -1627,6 +1627,20 @@
     "> - The highest average bonus job title is Security Engineer with 27,000 average bonus, and it has nearly no gap compared to the 2nd highest average bonus job title is Data Science Manager with 26,517 average bonus. Looking at the top 3 highest, we can see that they are close to each other\n",
     "> - The lowest average bonus job title is Data Engineer with 14,000 average bonus, and it has nearly no gap compared to the 2nd lowest average bonus job title is Program Manager with 14,467 average bonus. Looking at the top 3 lowest, we can see that they are close to each other. However, the lowest average still has a big gap compared to the highest average bonus\n",
     "> Overall, the bonus of the top 10 job titles is not really high compared to total compensation and has quite small gap compared to each other"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 6:** What is What is the average base salary of the top 10 companies?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 8:** What is What is the average stock of the top 10 companies?"
    ]
   }
  ],
