conclustion of exploration

--- a/notebooks/3-exploration.ipynb
+++ b/notebooks/3-exploration.ipynb
@@ -2299,7 +2299,19 @@
    "metadata": {},
    "source": [
     "**About big company**\n",
-    "- "
+    "- The big size company does not mean the high total compensation or high base salary or high bonus or high stock\n",
+    "- The big size company does not mean the nice culture\n",
+    "- Apple and Facebook are 2 big company always give the highest total compensation, base salary, bonus, and stock to their employees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**About job title**\n",
+    "- Software Engineer Manager and Data Science Manager usually have the high total compensation, base salary, bonus, and stock (especially Software Engineer Manager)\n",
+    "- However, the highest bonus belongs to Security Engineer\n",
+    "- The job title with highest total compensation does not mean the job title with highest base salary, bonus, and stock"
    ]
   }
  ],
