get cleaned data

--- a/notebooks/4-visualization.ipynb
+++ b/notebooks/4-visualization.ipynb
@@ -44,11 +44,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company</th>\n",
+       "      <th>company_size</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>level</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>yoe_total</th>\n",
+       "      <th>yoe_at_company</th>\n",
+       "      <th>base</th>\n",
+       "      <th>stock</th>\n",
+       "      <th>bonus</th>\n",
+       "      <th>total_compensation</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Logitech</td>\n",
+       "      <td>7250</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>I4</td>\n",
+       "      <td>Testing (SDET)</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>190000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>200000.0</td>\n",
+       "      <td>San Francisco Bay Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Logitech</td>\n",
+       "      <td>7250</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>I2</td>\n",
+       "      <td>ML / AI</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>126000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>133000.0</td>\n",
+       "      <td>Vancouver, WA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Logitech</td>\n",
+       "      <td>7250</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>I3</td>\n",
+       "      <td>Testing (SDET)</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>120000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>12000.0</td>\n",
+       "      <td>137000.0</td>\n",
+       "      <td>San Francisco, CA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Logitech</td>\n",
+       "      <td>7250</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>I4</td>\n",
+       "      <td>Production</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>110000.0</td>\n",
+       "      <td>Hsin-chu, TP, Taiwan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Logitech</td>\n",
+       "      <td>7250</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>I1</td>\n",
+       "      <td>ML / AI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>123100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>123100.0</td>\n",
+       "      <td>New York, NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1245</th>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>21620</td>\n",
+       "      <td>Software Engineering Manager</td>\n",
+       "      <td>L3</td>\n",
+       "      <td>Video Game</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>80400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80400.0</td>\n",
+       "      <td>Bordeaux, AQ, France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1246</th>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>21620</td>\n",
+       "      <td>Software Engineering Manager</td>\n",
+       "      <td>L4</td>\n",
+       "      <td>API Development (Back-End)</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>115300.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11500.0</td>\n",
+       "      <td>126800.0</td>\n",
+       "      <td>Montreal, QC, Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1247</th>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>21620</td>\n",
+       "      <td>Software Engineering Manager</td>\n",
+       "      <td>L3</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>73900.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>73900.0</td>\n",
+       "      <td>Paris, IL, France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1248</th>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>21620</td>\n",
+       "      <td>Software Engineering Manager</td>\n",
+       "      <td>L4</td>\n",
+       "      <td>Full Stack</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9</td>\n",
+       "      <td>125000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>130000.0</td>\n",
+       "      <td>Montreal, QC, Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1249</th>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>21620</td>\n",
+       "      <td>Software Engineering Manager</td>\n",
+       "      <td>L4</td>\n",
+       "      <td>Game Development</td>\n",
+       "      <td>25</td>\n",
+       "      <td>10</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>122000.0</td>\n",
+       "      <td>Toronto, ON, Canada</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1250 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       company  company_size                     job_title level  \\\n",
+       "0     Logitech          7250             Software Engineer    I4   \n",
+       "1     Logitech          7250             Software Engineer    I2   \n",
+       "2     Logitech          7250             Software Engineer    I3   \n",
+       "3     Logitech          7250             Software Engineer    I4   \n",
+       "4     Logitech          7250             Software Engineer    I1   \n",
+       "...        ...           ...                           ...   ...   \n",
+       "1245   Ubisoft         21620  Software Engineering Manager    L3   \n",
+       "1246   Ubisoft         21620  Software Engineering Manager    L4   \n",
+       "1247   Ubisoft         21620  Software Engineering Manager    L3   \n",
+       "1248   Ubisoft         21620  Software Engineering Manager    L4   \n",
+       "1249   Ubisoft         21620  Software Engineering Manager    L4   \n",
+       "\n",
+       "                          domain  yoe_total  yoe_at_company      base  \\\n",
+       "0                 Testing (SDET)         10               5  190000.0   \n",
+       "1                        ML / AI          4               3  126000.0   \n",
+       "2                 Testing (SDET)         11              11  120000.0   \n",
+       "3                     Production          8               8  100000.0   \n",
+       "4                        ML / AI          2               0  123100.0   \n",
+       "...                          ...        ...             ...       ...   \n",
+       "1245                  Video Game         13              13   80400.0   \n",
+       "1246  API Development (Back-End)         10               1  115300.0   \n",
+       "1247                       Other         12              12   73900.0   \n",
+       "1248                  Full Stack         20               9  125000.0   \n",
+       "1249            Game Development         25              10  100000.0   \n",
+       "\n",
+       "        stock    bonus  total_compensation                location  \n",
+       "0     10000.0      0.0            200000.0  San Francisco Bay Area  \n",
+       "1         0.0   7000.0            133000.0           Vancouver, WA  \n",
+       "2      5000.0  12000.0            137000.0       San Francisco, CA  \n",
+       "3     10000.0      0.0            110000.0    Hsin-chu, TP, Taiwan  \n",
+       "4         0.0      0.0            123100.0            New York, NY  \n",
+       "...       ...      ...                 ...                     ...  \n",
+       "1245      0.0      0.0             80400.0    Bordeaux, AQ, France  \n",
+       "1246      0.0  11500.0            126800.0    Montreal, QC, Canada  \n",
+       "1247      0.0      0.0             73900.0       Paris, IL, France  \n",
+       "1248      0.0   5000.0            130000.0    Montreal, QC, Canada  \n",
+       "1249  20000.0   2000.0            122000.0     Toronto, ON, Canada  \n",
+       "\n",
+       "[1250 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cleaned_data = pd.reac_csv()"
+    "cleaned_data = pd.read_csv('./data/cleaned_data.csv')\n",
+    "cleaned_data"
    ]
   }
  ],
