refactor: submission structure

--- a/src/2-preprocessing.ipynb
+++ b/src/2-preprocessing.ipynb
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "raw_df = pd.read_csv('./data/raw_data.csv')\n",
+    "raw_df = pd.read_csv('../data/raw_data.csv')\n",
     "raw_df.head()"
    ]
   },
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "col_meaning_df = pd.read_csv('./data/schema.csv')\n",
+    "col_meaning_df = pd.read_csv('../data/schema.csv')\n",
     "col_meaning_df"
    ]
   },
@@ -1326,7 +1326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_df.to_csv('./data/cleaned_data.csv', index=False)"
+    "raw_df.to_csv('../data/cleaned_data.csv', index=False)"
    ]
   }
  ],
