chore: remove redundant text

--- a/src/5-data-modeling.ipynb
+++ b/src/5-data-modeling.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "- **Type of Problem:** Regression\n",
-    "- **Objective:** Predict the total compensation of an employee based on various job-related features.\n",
+    "- **Objective:** The total compensation of an employee based on various job-related features.\n",
     "- **Features:**\n",
     "    1. `company`: The company the employee works for (categorical).\n",
     "    2. `company_size`: The size of the company (numerical).\n",
