chore: fix typo

--- a/src/1-crawler.ipynb
+++ b/src/1-crawler.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "def scrape_job_data(company_id: str, job_title_id: str, size: str):\n",
-    "    url = f'https://www.levels.fyi/company/{company_id}/salaries/{job_title_id}'\n",
+    "    url = f'https://www.levels.fyi/companies/{company_id}/salaries/{job_title_id}'\n",
     "    driver = webdriver.Chrome()\n",
     "    driver.get(url)\n",
     "    print(f'--> crawling {company_id} {job_title_id}...')\n",
